--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Hello World</h1>
-<h2 href="/collections-pieces/">Mes collections de pièces</h2>
+<h2><a href="/collections-pieces/">Mes collections de pièces</a></h2>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
