ajout de menu jeux
pour les tests

--- a/jeux/index.html
+++ b/jeux/index.html
@@ -4,9 +4,8 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Hello World</h1>
-<h2><a href="/collections-pieces/">Mes collections de pièces</a></h2>
-<h2><a href="/jeux/">Mes jeux</a></h2>
+<h1>Mes jeux</h1>
+<h2><a href="/jeux1.html">Jeu 1</a></h2>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
