--- a/jeux/index.html
+++ b/jeux/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Mes jeux</h1>
-<h2><a href="/jeux1.html">Jeu 1</a></h2>
+<h2><a href="./jeux1.html">Jeu 1</a></h2>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
