--- a/collections-pieces/index.html
+++ b/collections-pieces/index.html
@@ -2,8 +2,16 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./header.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+<div class="navbar">
+  <a href="./"><i class="fa fa-fw fa-home"></i> Home</a> 
+  <a class="active" href="/collections-pieces/"><i class="fa fa-fw fa-search"></i> Collections</a> 
+  <a href="/jeux/"><i class="fa fa-fw fa-envelope"></i> Jeux</a> 
+  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+</div>
 <h1>Mes collections de pièces</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
