--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="navbar">
-  <a class="active" href="./"><i class="fa fa-fw fa-home"></i> Home</a> 
+  <a class="active" href="../"><i class="fa fa-fw fa-home"></i> Home</a> 
   <a href="/collections-pieces/"><i class="fa fa-fw fa-search"></i> Collections</a> 
   <a href="/jeux/"><i class="fa fa-fw fa-envelope"></i> Jeux</a> 
   <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
