--- a/collections-pieces/index.html
+++ b/collections-pieces/index.html
@@ -9,7 +9,7 @@
 <div class="navbar">
   <a href="../"><i class="fa fa-fw fa-home"></i> Home</a> 
   <a class="active" href="/collections-pieces/"><i class="fa fa-fw fa-search"></i> Collections</a> 
-  <a href="/jeux/"><i class="fa fa-fw fa-envelope"></i> Jeux</a> 
+  <a href="/jeux/"><i class="fa fa-fw fa-gamepad"></i> Jeux</a> 
   <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
 </div>
 <h1>Mes collections de pièces</h1>
