--- a/jeux/jeux1.html
+++ b/jeux/jeux1.html
@@ -3,6 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../header.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body onload="startGame()">
 <script>
@@ -66,6 +68,12 @@ function updateGameArea() {
     myGamePiece.update();
 }
 </script>
+<div class="navbar">
+  <a href="../"><i class="fa fa-fw fa-home"></i> Home</a> 
+  <a href="/collections-pieces/"><i class="fa fa-fw fa-search"></i> Collections</a> 
+  <a class="active" href="/jeux/"><i class="fa fa-fw fa-gamepad"></i> Jeux</a> 
+  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+</div>
 <p>Make sure this window has focus, then use the arrow keys on you keyboard to move the red square.</p>
 <p>When pressing both the left and the down arrow, the red square will move both down and to the left.</p>
 </body>
