--- a/jeux/jeux1.html
+++ b/jeux/jeux1.html
@@ -74,7 +74,9 @@ function updateGameArea() {
   <a class="active" href="/jeux/"><i class="fa fa-fw fa-gamepad"></i> Jeux</a> 
   <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
 </div>
-<canvas id="canvas"/>
+<div>
+	<canvas id="canvas"></canvas>
+</div>
 <p>Make sure this window has focus, then use the arrow keys on you keyboard to move the red square.</p>
 <p>When pressing both the left and the down arrow, the red square will move both down and to the left.</p>
 </body>
