--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="../header.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<div class="navbar">
-  <a class="active" href="../"><i class="fa fa-fw fa-home"></i> Home</a> 
-  <a href="/collections-pieces/"><i class="fa fa-fw fa-search"></i> Collections</a> 
-  <a href="/jeux/"><i class="fa fa-fw fa-gamepad"></i> Jeux</a> 
-  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-</div>
+<?php include "../header.html" ?>
 <h1>Hello World</h1>
 <h2><a href="/collections-pieces/">Mes collections de pièces</a></h2>
 <h2><a href="/jeux/">Mes jeux</a></h2>
