--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-<?php include "../header.html" ?>
-<h1>Hello World</h1>
-<h2><a href="/collections-pieces/">Mes collections de pièces</a></h2>
-<h2><a href="/jeux/">Mes jeux</a></h2>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<link rel="stylesheet" href="style.css">
+	<script
+	  src="https://code.jquery.com/jquery-3.6.0.min.js"
+	  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+	  crossorigin="anonymous"></script>
+	<script>
+		$(function()[
+			$('#header).load('header.html');
+		]);
+	</script>
+	</head>
+	<body>
+		<div id="header"></div>
+		<h1>Hello World</h1>
+		<h2><a href="/collections-pieces/">Mes collections de pièces</a></h2>
+		<h2><a href="/jeux/">Mes jeux</a></h2>
+		<p>I'm hosted with GitHub Pages.</p>
+	</body>
 </html>
