--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="../header.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="../css/style-base.css">
 	</head>
 	<body>
+		<object data="../header.html" type="text/html" class="obj-header navbar"></object>
 		<div class="navbar">
 			<a class="active" href="../"><i class="fa fa-fw fa-home"></i> Home</a> 
 			<a href="/collections-pieces/"><i class="fa fa-fw fa-search"></i> Collections</a> 
