--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="../css/style-base.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<object data="../header.html" type="text/html" class="obj-header navbar"></object>
-		<div class="navbar">
-			<a class="active" href="../"><i class="fa fa-fw fa-home"></i> Home</a> 
-			<a href="/collections-pieces/"><i class="fa fa-fw fa-search"></i> Collections</a> 
-			<a href="/jeux/"><i class="fa fa-fw fa-gamepad"></i> Jeux</a> 
-			<a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-		</div>
 		<h1>Hello World</h1>
 		<h2><a href="/collections-pieces/">Mes collections de pièces</a></h2>
 		<h2><a href="/jeux/">Mes jeux</a></h2>
